Fixed all additional errors
Fixed all errors present in error.log, which did not effect gameplay but still generated said errors. Error free!!

--- a/localisation/english/crashedTitan_origin_l_english.yml
+++ b/localisation/english/crashedTitan_origin_l_english.yml
@@ -22,12 +22,13 @@ crashed_titan_stageBCD:0 "Further study to learn of the technologies used within
 crashed_titan_situation_approachA:0 "Gradual Integration"
 crashed_titan_situation_approachB:0 "Accelerated Adaptation"
 crashed_titan_situation_approachC:0 "Titan Ascendancy"
-Gradual_antegration_tooltip: "We will focus on this situation to the same extent as our civilizaton's other projects."
-Accelerated_adaptation_tooltip: "We will greatly focus on this situation as it can revolutionize our military power.\nSituation Speed: §G+50%§!"
-Titan_acendancy_tooltip: "We will put most of our focus on this project as it is the key to the survival of our people.\nSituation Speed: §G+100%§!"
-situation_monthly_progress_stage2_lack_tech: "We do not have enough understanding of ship armors."
-situation_monthly_progress_stage3_lack_tech: "We do not have enough understanding of ship shields."
-situation_monthly_progress_stage4_lack_tech: "We do not have enough understanding of ship weaponary and reactors."
+Gradual_integration_tooltip: "We will focus on this situation to the same extent as our civilizaton's other projects"
+Accelerated_adaptation_tooltip: "We will greatly focus on this situation as it can revolutionize our military power"
+Titan_acendancy_tooltip: "We will put most of our focus on this project as it is the key to the survival of our people"
+situation_monthly_progress_stage2_lack_tech: "We do not have enough understanding of ship armors"
+situation_monthly_progress_stage3_lack_tech: "We do not have enough understanding of ship shields"
+situation_monthly_progress_stage4_lack_tech: "We do not have enough understanding of ship weaponary and reactors"
+approach_not_available: "We do not have the required technological understanding."
 
 crashed_titan_planet_modifier:0 "Crashed Titan Laboratory"
 crashed_titan_country_modifier:0 "Crashed Titan Insight"
